<?xml version="1.0"?>
<package format="2">
  <name>packml_gui</name>
  <version>0.1.0</version>
  <description>PackML GUI</description>

  <maintainer email="Austin.Deric@swri.org">Austin Deric</maintainer>
  <author email="Austin.Deric@swri.org">Austin Deric</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>packml_msgs</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>

  <export>
   <rviz plugin="${prefix}/plugin.xml"/>
  </export>

</package>
