<?xml version="1.0"?>
<package format="2">
  <name>packml_msgs</name>
  <version>0.1.0</version>
  <description>Packml messages</description>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <license>Apache 2.0</license>
  <author >Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
