<?xml version="1.0"?>
<package format="2">
  <name>packml_ros</name>
  <version>0.1.0</version>
  <description>ROS wrapper around packml state machine</description>

  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>

  <license>Apache 2.0</license>

  <author>Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>packml_msgs</depend>
  <depend>packml_sm</depend>
  <depend>roscpp</depend>

  <test_depend>gtest</test_depend>

</package>
