<?xml version="1.0"?>
<package format="2">
  <name>packml_sm</name>
  <version>0.0.0</version>
  <description>Packml state machine</description>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <license>Apache 2.0</license>
  <author >Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>

</package>
